# pysrt3d

./: .gitignore  run.md  run.py  run_demo.bat  run_demo.ps1  setup.py
Release/: pysrt3d.cp311-win_amd64.pyd
documents/: awesome_da3_feasibility.md  cursor_project_setup_and_installation.md  cursor_pysrt3d_integrate_da3.md  cursor_pysrt3d_project_installation.md  estimate_k_matrix.md  input_3d_model.md  input_k_and_startPose.md  output_pose_matrix.md
example/: demo.py
example/data/: poses_metadata.npy  poses_output.npy  poses_output.txt
lib/: estimate_k_matrix.py
pysrt3d/: __init__.py  pysrt3d.cp311-win_amd64.pyd
source/: CMakeLists.txt
user/input/earbud/: K.txt  README_blender.md  blender_animate.py  blender_animate_standalone.py  blender_animate_standalone_complete.py  blender_animate_with_camera.py  create_standalone_script.py  diagnose_pose.py  embedded_poses_data.py  explain_pose.md  generate_embedded_poses.py  metadata.npy  metadata.txt  pose.txt  pose_test_1.txt  pose_test_2.txt  pose_test_3.txt  pose_test_4.txt  pose_test_5.txt  pose_test_6.txt  pose_updated.txt  poses.npy  poses.txt  poses_gl.npy  test_all_rotations.py  test_closer_pose.txt  test_rotation_orders.py  track_earbud.py  update_distance.py  update_pose_with_rotation.py  visualize_pose.py  visualize_poses.py
